delete red border on firefox and fix option color error

--- a/app/styles/components/c-contact-form.scss
+++ b/app/styles/components/c-contact-form.scss
@@ -45,6 +45,10 @@
     margin-bottom: 10px;
     outline: 0;
     padding: 10px;
+
+    &:required {
+      box-shadow: none;
+    }
   }
 
   .select-container {
@@ -77,6 +81,10 @@
       outline: 0;
       padding: 10px;
 
+      option{
+        color: $color-12;
+      }
+
       &::-ms-expand {
         display: none;
       }
@@ -91,6 +99,10 @@
     margin-bottom: 10px;
     outline: 0;
     padding: 10px;
+
+    &:required {
+      box-shadow: none;
+    }
   }
 
   ::-webkit-input-placeholder {
